--- a/auth/compose.yaml
+++ b/auth/compose.yaml
@@ -11,13 +11,13 @@ services:
     networks:
       - auth-network
     volumes: 
-      - 'auth-data:/var/lib/postgresql/data'
+      - ./auth-data:/var/lib/postgresql/data
       - ./initdb/postgres-init.sql:/docker-entrypoint-initdb.d/postgres-init.sql
   redis:
     image: 'redis:latest'
     container_name: 'redis'
     volumes:
-      - 'redis-data:/data'
+      - ./redis-data:/data
     ports:
       - '6379:6379'
     networks:
