--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=auth
+server.port=8080
+server.address=localhost
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=Auth Stream
+info.app.description=Auth Stream
+info.app.version=1.0.0
+
+
+spring.security.user.name=admin
+spring.security.user.password=123456789
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id=auth-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
