Refactor: Remove obsolete classes and files, and introduce new application structure with entities

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "AuthstreamApplication",
+            "request": "launch",
+            "mainClass": "authstream.AuthstreamApplication",
+            "projectName": "auth"
+        },
+        {
+            "type": "java",
             "name": "Admin",
             "request": "launch",
             "mainClass": "authstream.auth.admin.Admin",
