--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -7,7 +7,6 @@ info.app.name=Auth Stream
 info.app.description=Auth Stream
 info.app.version=1.0.0
 
-
 spring.security.user.name=admin
 spring.security.user.password=123456789
 
@@ -17,6 +16,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
