--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: CI/CD with Maven
 
 on:
   push:
@@ -28,6 +28,3 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('auth/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-
-    - name: Build with Maven
-      run: mvn -B clean package --file auth/pom.xml
