feat(endpoints): core endpoints of forward auth

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -7,8 +7,8 @@ info.app.name=Auth Stream
 info.app.description=Auth Stream
 info.app.version=1.0.0
 
-spring.security.user.name=admin
-spring.security.user.password=123456789
+# spring.security.user.name=admin
+# spring.security.user.password=123456789
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
 spring.datasource.username=postgres
