--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -39,3 +39,7 @@ logging.level.org.springdoc=DEBUG
 spring.main.allow-bean-definition-overriding=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.authstream.application.services=DEBUG
