feat(auth): update CORS configuration, enhance User entity, and modify nginx settings

--- a/auth/src/main/java/authstream/resources/templates/nginx.conf
+++ b/auth/src/main/java/authstream/resources/templates/nginx.conf
@@ -18,16 +18,17 @@ http {
             access_by_lua_block {
                 local sock = ngx.socket.tcp()
                 sock:settimeout(5000)
-                
+
                 local ok, err = sock:connect("192.168.65.2", 8080)
                 if not ok then
                     ngx.log(ngx.ERR, "Failed to connect to auth service: ", err)
                     return ngx.exit(500)
                 end
                 
+                local original_method = ngx.req.get_method()
                 local http_request = table.concat({
-                    "GET /auth HTTP/1.1",
-                    "Host: host.docker.internal",
+                    original_method .. " /auth HTTP/1.1",
+                    "Host: 192.168.65.2",
                     "Connection: close",
                     "Accept: application/json",
                     "X-Real-IP: " .. ngx.var.remote_addr,
