--- a/auth/src/main/java/authstream/resources/templates/nginx.conf
+++ b/auth/src/main/java/authstream/resources/templates/nginx.conf
@@ -11,15 +11,15 @@ http {
     }
 
     server {
-        listen 80;
-        server_name 127.0.0.1;
+        listen [[${NGINX_SERVER_PORT}]];
+        server_name [[${DOMAIN_NAME}]];
         auth_request uri | off;
         location / {
             access_by_lua_block {
                 local sock = ngx.socket.tcp()
-                sock:settimeout(5000)
+                sock:settimeout([[${AUTH_SERVER_TIMEOUT}]])
 
-                local ok, err = sock:connect("192.168.65.2", 8080)
+                local ok, err = sock:connect("[[${AUTH_SERVER_DOMAIN}]]", [[${AUTH_SERVER_PORT}]])
                 if not ok then
                     ngx.log(ngx.ERR, "Failed to connect to auth service: ", err)
                     return ngx.exit(500)
@@ -27,8 +27,8 @@ http {
                 
                 local original_method = ngx.req.get_method()
                 local http_request = table.concat({
-                    original_method .. " /auth HTTP/1.1",
-                    "Host: 192.168.65.2",
+                    original_method .. " /authenticate HTTP/1.1",
+                    "Host: [[${AUTH_SERVER_DOMAIN}]]",
                     "Connection: close",
                     "Accept: application/json",
                     "X-Real-IP: " .. ngx.var.remote_addr,
@@ -73,7 +73,7 @@ http {
                 end
             }
             
-            proxy_pass http://192.168.65.2:8080;
+            proxy_pass [[${APP_SERVER_DOMAIN}]];
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
