feat(permissionClient, NginxController): Hanlde logic get template nginx austeamjs. Handle logic check permission Client

--- a/auth/src/main/java/authstream/resources/templates/nginx.conf
+++ b/auth/src/main/java/authstream/resources/templates/nginx.conf
@@ -12,7 +12,7 @@ http {
     resolver 8.8.8.8;
 
     server {
-        listen __NGINX_PORT__;
+        listen __NGINX_PORT__; # please replace your Nginx Port
         server_name __DOMAIN_NAME__;
 
         location / {
